Add PolicyCopyTool WIP, enhance DBConnector for improved connection handling, and update models for better data representation

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,12 @@ langchain_groq
 requests
 fastapi
 python-dotenv
-pandas
-numpy
-python-dotenv
 pydantic
 langchain_google_genai
 google-generativeai
 google-ai-generativelanguage
 streamlit
-requests
 uvicorn
+psycopg2-binary
 
 -e .
